# SimpleChat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main  main.cpp  makefile
include/: client.hpp  clientwindow.hpp  connection.hpp  server.hpp  serverwindow.hpp  window.hpp
src/: CMakeLists.txt  client.cpp  clientwindow.cpp  connection.cpp  server.cpp  serverwindow.cpp  window.cpp
test/: testclient  testclient.cpp  testserver  testwindow.cpp
